@@ -62,14 +62,15 @@ our $family;
 use constant { ROUTEMARKED_SHARED => 1, ROUTEMARKED_UNSHARED => 2 };
 
 #
-# Initialize globals -- we take this novel approach to globals initialization to allow
-#                       the compiler to run multiple times in the same process. The
-#                       initialize() function does globals initialization for this
-#                       module and is called from an INIT block below. The function is
-#                       also called by Shorewall::Compiler::compiler at the beginning of
-#                       the second and subsequent calls to that function.
+# Rather than initializing globals in an INIT block or during declaration, 
+# we initialize them in a function. This is done for two reasons:
 #
-
+#   1. Proper initialization usually depends on the address family which isn't
+#      known until the compiler has started.
+#
+#   2. The compiler can run multiple times in the same process so it has to be
+#      able to re-initialize all of its dependent modules.
+#
 sub initialize( $ ) {
     $family = shift;
 
@@ -87,10 +88,6 @@ sub initialize( $ ) {
 		    default => { number => DEFAULT_TABLE , mark => 0 , optional => 0 } ,
 		    unspec  => { number => UNSPEC_TABLE  , mark => 0 , optional => 0 } );
     @providers = ();
-}
-
-INIT {
-    initialize( F_IPV4 );
 }
 
 #
