@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.1
 
 3)  Added support for --persistent.
 
+4)  Don't do module initialization in an INIT block.
+
 Changes in Shorewall 4.4.0
 
 1)  Fix 'compile ... -' so that it no longer requires '-v-1'
